--- a/_sources/requirements.txt
+++ b/_sources/requirements.txt
@@ -1,4 +1,5 @@
-qoqo>=0.5.0
+qoqo>=1.2.5
+qoqo_calculator_pyo3>=1.1.0
 numpy
 sphinx >= 2.1
 nbsphinx
@@ -6,4 +7,4 @@ pygments
 recommonmark
 myst_parser
 sphinx_rtd_theme
-qoqo_aqt>=0.1.1
+qoqo_aqt>=0.6.1
